--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -21,21 +21,25 @@
     background-color: #2b2b2b;
     margin: 3%;
     width: 70%;
+    padding: 2%;
     * {
-        margin: 2%;
+        margin: 3%;
     }
+    .user-container {
+        display: inline-flex;
+        align-items: center;
+        *{
+            margin: 0;
+        }
+        mat-icon {
+            margin-right: 0.3rem;
+        }
+    }
+    
+    
 }
 
 .avatar {
     width: 100%;
 }
 
-.rank {
-    padding-top: 12px;
-    margin-right: 1%;
-    display: inline-flex;
-}
-
-.user {
-    display: inline-flex;
-}
