--- a/src/app/emotes/emote-search/emote-search.component.html
+++ b/src/app/emotes/emote-search/emote-search.component.html
@@ -22,9 +22,14 @@
 		</div>
 
 		<!-- Checkbox for whether or not global emotes should be visible -->
-		<mat-checkbox formControlName="hideGlobal">
-			<mat-label> Hide Global Emotes </mat-label>
-		</mat-checkbox>
+		<mat-radio-group class="d-flex flex-column" formControlName="hideGlobal">
+			<mat-label>Global Emotes</mat-label>
+			<div class="my-1"></div>
+
+			<mat-radio-button>Include</mat-radio-button>
+			<mat-radio-button>Hide</mat-radio-button>
+			<mat-radio-button>Only</mat-radio-button>
+		</mat-radio-group>
 
 		<!-- Display Order -->
 
