--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,9 +2,9 @@
 	<!-- App Title -->
 	<div class="d-flex align-items-center" [routerLink]="['/']">		
 		<div class="no-select app-title" [class.is-loading]="appService.loading">
-			<!-- Logo
+			<!-- Logo -->
 			<div class="_logo"></div>
-		 	-->
+		 	
 
 			<span class="_text">{{appService.title}}</span>
 
