AppService - change devstage to beta

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -22,7 +22,7 @@
 	._dev-stage-text {
 		width: 0;
 		position: relative;
-		color: red;
+		color: rgb(0, 150, 255);
 		font-size: 8.8px;
 		bottom: -18px;
 		left: -30%;
