--- a/src/app/emotes/emote/emote.component.html
+++ b/src/app/emotes/emote/emote.component.html
@@ -36,7 +36,7 @@
 	<!-- Preview sizes -->
 	<div class="d-flex flex-row align-items-center justify-content-center sizes-preview mt-1" [appColor]="themingService.bg.darken(.075)" [isBackground]="true">
 		<!-- Size -->
-		<div class="size-preview d-flex flex-column justify-content-end align-items-center" [style.height.px]="MAX_HEIGHT" *ngFor="let size of getSizes() | async">
+		<div class="size-preview d-flex flex-column justify-content-end align-items-center" [style.height.px]="MAX_HEIGHT" *ngFor="let size of sizes | async">
 			<div class="preview-img" [ngSwitch]="isProcessing() | async">
 				<img [src]="size.url" *ngSwitchCase="false">
 				<mat-spinner [diameter]="32 * size.scope" *ngSwitchCase="true"></mat-spinner>
