--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,12 @@
+.logo-container {
+	display: flex;
+
+	object {
+		height: 33vh;
+		max-height: 256px;
+	}
+}
+
 .browser-icon {
 	cursor: pointer;
 	border-radius: 50%;
