--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,14 @@
 		</span>
 	</div>
 
-	<span></span>
+	<span [appColor]="themingService.colors.discord_blurple" class="discord-cta" [class.d-none]="!(discordWidget | async)">
+		<a mat-icon-button target="_blank" [href]="(discordWidget | async)?.instant_invite" class="d-flex flex-column align-items-center">
+			<mat-icon [svgIcon]="(themingService.getSvgIcon('discord') | async) || ''"></mat-icon>
+			<div class="my-1"></div>
+			<p>{{discordWidget.getValue()?.name}} on Discord</p>
+			<p>({{discordWidget.getValue()?.presence_count}} members online now)</p>
+		</a>
+	</span>
 	<span></span>
 	<span></span>
 	<!-- Footer Links -->
