--- a/src/app/util/user-name/user-name.component.html
+++ b/src/app/util/user-name/user-name.component.html
@@ -1,5 +1,5 @@
 <!-- Login / Current User -->
-<!-- Display Auth user -->
+<!-- Display Auth user 
 <div class="signed-in-user text-truncate">
     <div class="signed-in-avatar" [style.border-style]="avatarBorder ? 'solid' : 'none'"
         [appColor]="themingService.bg.lighten(.1)" [isBackground]="true" [style.height.em]="size[0]"
@@ -11,10 +11,24 @@
 
     <span class="username-container" *ngIf="showUsername" [appColor]="((target.getRank() | async) || 0) >= 1 ? themingService.primary : undefined" [style.font-size.em]="size[1]">
         <span [ngSwitch]="clickable">
-            <span class="is-username" *ngSwitchCase="true" [routerLink]="['/user', target.getUsername() | async]" [class.clickable]="clickable">
+            <span class="is-username" *ngSwitchCase="true" >
                 {{this.target.getUsername() | async}}
             </span>
             <span class="is-username" *ngSwitchCase="false"> {{this.target.getUsername() | async}} </span>
         </span>
     </span>
-</div>
+</div>-->
+
+<span class="user-name" [routerLink]="['/user', target.getUsername() | async]" [class.clickable]="clickable">
+    <span class="user-avatar" [style.width.em]="size[0]" *ngIf="showAvatar" [style.border-color]="getRoleColor() | async">
+        <img [src]="target.getAvatarURL() | async">
+    </span>
+
+    <span *ngIf="showUsername" class="text-truncate username-container"
+        [appColor]="(getRoleColor() | async) || ''"
+        [style.max-width.px]="maxWidth"
+        [style.font-size.em]="size[1]"
+    >
+        {{ target.getUsername() | async }}
+    </span>
+</span>
