--- a/src/app/util/user-name/user-name.component.scss
+++ b/src/app/util/user-name/user-name.component.scss
@@ -1,24 +1,13 @@
-.signed-in-user {
+.user-name {
 	display: flex;
 	align-items: center;
-	width: 100%;
+	box-sizing: border-box;
+	&.clickable { cursor: pointer; }
 
-	.username-container {
-		display: block;
-		.is-username {
-			font-size: inherit;
-
-			&.clickable { cursor: pointer; }
-		}
-		
-	}
-
-
-	.signed-in-avatar {
+	.user-avatar {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border-color: currentColor;
 		border-style: solid;
 		border-width: 1px;
 		border-radius: 50%;
@@ -28,5 +17,7 @@
 			width: 100%;
 			clip-path: circle(50% at center);
 		}
+
+		margin-right: .33em;
 	}
 }
