--- a/src/app/util/user-name/user-name.component.html
+++ b/src/app/util/user-name/user-name.component.html
@@ -19,7 +19,7 @@
     </span>
 </div>-->
 
-<span class="user-name" [routerLink]="['/user', target.getUsername() | async]" [class.clickable]="clickable">
+<span class="user-name" (click)="onClick()" [class.clickable]="clickable">
     <span class="user-avatar" [style.width.em]="size[0]" *ngIf="showAvatar" [style.border-color]="getRoleColor() | async">
         <img [src]="target.getAvatarURL() | async">
     </span>
